themes/maupassant/source/css/style.scss
/* ... */
#footer {
    padding: .8em 0 3.6em;
    margin-top: 1em;
    line-height: 2.5;
    color: #6E7173;
    text-align: center;
    span {
        font-size: .9em;
    }
}

/* for archive page starts*/
.post-archive {
    font-size: 15px;
    line-height: 2;
    padding-bottom: .8em;
    h2 {
        margin: 0;
        font: bold 25px / 1.1 "Open Sans", "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
    }
    .date {
        padding-right: .7em;
    }
}
/* for archive page ends*/

/* middle*/
@media print, screen and (max-width: 48em) {
    .body_container {
        padding: 0 30px;
    }
    .content_container {
        padding-right: 15px;
    }
    .hidden_mid_and_down {
        display: none !important;
    }
    #sidebar {
        border-left-width: 0px;
    }
    #header {
        .site-name {
            margin-bottom: 20px;
            text-align: center;
        }
        #nav-menu {
            position: relative;
            text-align: center;
            a {
                padding: 0 15px;
                line-height: 27px;
                height: 27px;
                font-size: 13px;
            }
        }
    }
}

/* small*/
@media print, screen and (max-width: 35.5em) {
    .body_container {
        padding: 0 20px ;
    }
    .content_container {
        padding-right: 0;
    }
}

blockquote,.stressed {
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    margin: 2.5em 0;
    padding: 0 0 0 50px;
    color: #555;
    border-left: none;
}
blockquote::before,.stressed-quote::before {
    content: "\201C";
    display: block;
    font-family: times;
    font-style: normal;
    font-size: 48px;
    color: #444;
    font-weight: bold;
    line-height: 30px;
    margin-left: -50px;
    position: absolute;
}
strong,b,em {
    font-weight: bold;
}
pre {
    margin:2em 0;
}
.hidden1 {
    display: none;
}
/* ... */

